--- a/index.html
+++ b/index.html
@@ -1,55 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <header class="titulo">
-    <h1>Cadastro de Usuário</h1>
-  </header>
-  <section class="form-container">
-    <form action="#" method="post">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
-
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="senha">Senha:</label>
-      <input type="password" id="senha" name="senha" required>
-
-      <label for="confirmar-senha">Confirmar Senha:</label>
-      <input type="password" id="confirmar-senha" name="confirmar-senha" required>
-
-      <label>Gênero:</label>
-      <div class="genero-group">
-        <input type="radio" id="genero-masculino" name="genero" value="Masculino">
-        <label for="genero-masculino">Masculino</label>
-
-        <input type="radio" id="genero-feminino" name="genero" value="Feminino">
-        <label for="genero-feminino">Feminino</label>
-
-        <input type="radio" id="genero-outro" name="genero" value="Outro">
-        <label for="genero-outro">Outro</label>
-      </div>
-
-      <label for="data-nascimento">Data de Nascimento:</label>
-      <input type="date" id="data-nascimento" name="data-nascimento" required>
-
-      <label for="cidade">Cidade:</label>
-      <input type="text" id="cidade" name="cidade">
-
-      <label for="pais">País:</label>
-      <input type="text" id="pais" name="pais">
-
-      <button type="submit">Cadastrar</button>
-    </form>
-  </section>
+    
 </body>
 </html>
